--- a/sdweb/src/app.css
+++ b/sdweb/src/app.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Staatliches';
+  src: url("/fonts/Staatliches-Regular.ttf");
+}
+
+@font-face {
+  font-family: 'BebasNeue';
+  src: url("/fonts/BebasNeue-Regular.ttf");
+}
