add underline automatically to all a tags, remove underline from certain components when not hovering

--- a/sdweb/src/app.css
+++ b/sdweb/src/app.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  a {
+      @apply underline
+  }
+}
+
 @font-face {
   font-family: 'Staatliches';
   src: url("/fonts/Staatliches-Regular.ttf");
